--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Chronverna</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -10,6 +20,19 @@
       <h2>Figwheel template</h2>
       <p>Checkout your developer console.</p>
     </div>
+    <script src="lib/fastclick.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      // Prevent scrolling
+      document.ontouchmove = function(event) {
+        event.preventDefault();
+      };
+      // Eliminate 300ms click delay on mobile devices
+      if ('addEventListener' in document) {
+        document.addEventListener('DOMContentLoaded', function() {
+          FastClick.attach(document.body);
+        }, false);
+      }
+    </script>
     <script src="js/compiled/chronverna.js" type="text/javascript"></script>
   </body>
 </html>
